# RCompiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  asm_test.sh  builtin.c  builtin.ll  builtin.s  codegen_test.sh  ir_test.sh  main.cpp  run_one.sh  run_reimu.sh  test.s  test_codegen  test_codegen.cpp  test_codegen.sh  tmp.rx  tmp.rx.case1.bak
benchmark/: basicFunctionInlining.txt  benchmark_2026-06-13_01-40-26.txt  benchmark_2026-06-13_18-54-38.txt  benchmark_2026-06-13_18-56-22.txt  codegen.txt  constantFold.txt  dce.txt  linearScan.txt  mem2reg.txt  naiveFunctionInlining.txt  singleBlock.txt  singleDef.txt
build_assert/: CMakeCache.txt  Makefile  cmake_install.cmake
doc/: long_long_param_debug_notes.md  optimize.md
local_tests/: inner_mut_ref_forward_min.rx  inner_mut_ref_min.rx  long_expr_array_struct_access_2048.rx  long_expr_bitwise_temp_2048.rx  long_expr_bool_chain_2048.rx  long_expr_bool_chain_4096.rx  long_expr_call_bitwise_1536.rx  long_expr_call_chain_2048.rx  long_expr_mixed_cast_chain_2048.rx  long_expr_signed_isize_2048.rx  long_param_aggregate_forward_after_mutation_512.rx  long_param_aggregate_heavy_1024.rx  long_param_aggregate_heavy_1536.rx  long_param_array_of_refs_readonly_1024.rx  long_param_assoc_sret_mix_1536.rx  long_param_assoc_sret_mix_3072.rx  long_param_bool_heavy_2048.rx  long_param_bool_heavy_3072.rx  long_param_call_temporary_mix_1024.rx  long_param_call_temporary_mix_2048.rx  long_param_cast_heavy_2048.rx  long_param_const_input_mix_1024.rx  long_param_expr_combo_1536.rx  long_param_full_use_mix_4096.rx  (+22 more)
src/ast/: Path.h  ast.h  (+8 more)
(+159 files in other folders)
